# angel_stats

./: .gitignore  Dockerfile  Makefile  manage.py  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
admin_interface/: apps.py  models.py  signals.py  views.py  wagtail_hooks.py
admin_interface/migrations/: 0001_initial.py  0002_person.py  0003_person_free_text.py  0004_angel_delete_angelpage.py  0005_delete_person.py  0006_angelevent.py
angel_stats/: wsgi.py
angel_stats/settings/: base.py  dev.py
angel_stats/templates/: base.html
