[tool.poetry]
name = "angel-stats"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
wagtail = "^6.0"
mysqlclient = "^2.2.3"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[tool.black]
line-length = 120
target-version = ["py312"]
extend-exclude = """
(
    migrations
)
"""

[tool.isort]
profile = "black"
extend_skip = ["migrations"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
